--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-
-title: My Resume
-url: 'http://webjeda.com'
-baseurl: '/online-cv' #change it according to your repository name
+title: 'None'
+url: 'https://none.github.io'
+baseurl: '/cv' #change it according to your repository name
 
 
 # Enable one of these styles by removing #. Style will be applied only after restarting the build or serve.
@@ -13,19 +12,19 @@ baseurl: '/online-cv' #change it according to your repository name
 
 
 #Profile information
-name: Alan Doe
-tagline: Full Stack Developer
+name: None
+tagline: None
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
-email: hello@webjeda.com
-phone: 012 345 6789
-website: blog.webjeda.com #do not add http://
-linkedin: alandoe
-github: sharu725
-twitter: '@webjeda'
+email: none@example.com
+phone:
+website:
+linkedin: none
+github: none
+twitter: '@none'
 
 
 # Tracker
-analytics: UA-83979019-1
+analytics: 'UA-99738090-1'
 #Update all the sections by editing the files inside _includes folder.
